[tool.poetry]
name = "pytest_example"
version = "0.1.0"
description = ""
authors = ["ndavydovdev <ndavydov@aita.travel>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
pytest-mock = "^2.0.0"
pytest-xdist = "^1.31.0"
pytest-pythonpath = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
